# librepay

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
dashboard/: README.md  pubspec.yaml
dashboard/lib/: api.dart  main.dart  models.dart  theme.dart
dashboard/test/: widget_test.dart
dashboard/web/: index.html  manifest.json
src/: config.rs  error.rs  main.rs  models.rs  signature.rs  state.rs
src/ledger/: memory.rs  mod.rs
src/providers/: mock.rs  mod.rs
src/routes/: mod.rs  payments.rs  stats.rs  webhook.rs
